[gd_scene load_steps=3 format=3 uid="uid://cdyjrifsksata"]

[ext_resource type="Script" uid="uid://ctjmqaonc14ps" path="res://game_over_screen.gd" id="1_gt22q"]

[sub_resource type="LabelSettings" id="LabelSettings_w3hxg"]
font_size = 64
font_color = Color(1, 0, 0, 1)
outline_size = 4

[node name="GameOverScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gt22q")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.176471, 0.176471, 0.176471, 0.498039)

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="GameOverLabel" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "GAME OVER"
label_settings = SubResource("LabelSettings_w3hxg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RestartButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Restart"

[node name="QuitButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "Quit to Menu"

[connection signal="pressed" from="VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="VBoxContainer/QuitButton" to="." method="_on_menu_button_pressed"]
